--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,14 @@
     "@types/react": "^18.0.15",
     "@types/react-blockies": "^1.4.1",
     "@types/react-dom": "^18.0.6",
+    "@types/react-router": "^5.1.18",
+    "ethers": "^5.6.9",
     "react": "^18.2.0",
     "react-blockies": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "rxjs": "^7.5.6",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
