--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@types/react-blockies": "^1.4.1",
     "@types/react-dom": "^18.0.6",
     "@types/react-router": "^5.1.18",
+    "axios": "^0.27.2",
     "ethers": "^5.6.9",
     "react": "^18.2.0",
     "react-blockies": "^1.4.1",
